@@ -1,0 +1,11 @@
+#
+# database configuration file
+# 
+#
+#
+%dbconfig= (
+	connection => "mysql:database=fhem;host=db;port=3306",
+	user => "fhemuser",
+	password => "fhempassword",
+);
+
